# learning-rust

./: .gitignore  Cargo.toml  GUIDE.md
src/: domain.rs  errors.rs  handlers.rs  lib.rs  main.rs  ownership.rs
src/handlers/: mod.rs  posts.rs
src/posts_client/: http_impl.rs  mock_impl.rs  mod.rs
tests/: posts_e2e.rs
