[package]
name = "learning_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.51.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
